# comfy-gallery

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.agents/skills/testing-backend/: SKILL.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_seed_biginteger.py  002_workflow_search_text.py
backend/app/: config.py  main.py
backend/app/api/: media.py  scan.py
backend/app/models/: __init__.py  media.py
backend/app/schemas/: __init__.py  media.py
backend/app/services/: metadata.py  scanner.py  thumbnails.py
backend/tests/: conftest.py  test_api.py  test_metadata.py  test_scanner.py  test_thumbnails.py
docker/nginx/: default.conf
frontend/: Dockerfile  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: FolderTree.tsx  Header.tsx  MediaGrid.tsx  MediaViewer.tsx  Pagination.tsx
frontend/src/types/: media.ts
